[tool.poetry]
name = "mp4-2-mp3"
version = "0.1.0"
description = ""
authors = ["Matt Main_PC <matmigg0804@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tk = "^0.1.0"
moviepy = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
